# browser

./: README.md  meson.build  org.gnome.browser.json
data/: meson.build  org.gnome.browser.appdata.xml.in  org.gnome.browser.desktop.in  org.gnome.browser.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: browser.gresource.xml  browser.in  main.py  meson.build  window.py  window.ui  window.ui~  window2.ui  window2.ui~
